overflow mobile fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body {
   }
   .content-mobile {
     display: block;
+    overflow-x: hidden;
   }
   .content-web {
     display: none;
